[package]
name = "app"
version = "0.0.1"
description = "Calculates Height"
authors = ["codeaye"]
license = "MIT"
repository = "https://github.com/codeaye/height_calculator"
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.3", features = ["dialog-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
